FAQs section: shorten the title to display it correctly in the left menu

--- a/index.org
+++ b/index.org
@@ -212,7 +212,7 @@ download a [[http://orgmode.org/w/org-mode.git/snapshot][tar.gz snapshot]] from 
    - Download the [[file:orgcard.pdf][Refcard]] for org-mode
    - There is also a [[file:orgcard.txt][text version]] of the reference card.
 
-** Worg FAQ and "org-mode" tag on StackOverflow
+** FAQs
 
    - The [[http://orgmode.org/worg/org-faq.php][Org Mode FAQ]] is part the [[http://orgmode.org/worg/][Worg project]] and is collaboratively
      maintained by Worg's contributors.
